--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -689,7 +689,7 @@
 
 #sortDropdown {
   position: relative;
-  width: 180xpx;
+  width: 190px;
   white-space: nowrap; 
   height: 36px;
   display: flex;
@@ -1141,7 +1141,6 @@ sortOptions.querySelectorAll('.option').forEach(option => {
     renderResults(searchBox ? searchBox.value : '');
   });
 });
-
 
 
 // --- Close dropdown if clicking elsewhere ---
