--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1612,29 +1612,34 @@ entmFulls.forEach(fullName => {
   }
 
   // Build pill DOM
-  const pill = document.createElement('span');
-  pill.className = 'pill';
+const pill = document.createElement('span');
+pill.className = 'pill';
 
-  if (iconSrc) {
-    const icon = document.createElement('img');
-    icon.src = iconSrc;
-    icon.style.width = '30px';
-    icon.style.height = '30px';
-    icon.style.verticalAlign = 'middle';
-    icon.style.marginRight = '6px';
-    pill.appendChild(icon);
-  }
+if (iconSrc) {
+  const icon = document.createElement('img');
+  icon.src = iconSrc;
+  icon.style.width = '30px';
+  icon.style.height = '30px';
+  icon.style.verticalAlign = 'middle';
+  icon.style.marginRight = '6px';
+  pill.appendChild(icon);
+}
 
-  // --- Mini-season / season suffix ---
-  let textSuffix = '';
-  const miniMatch = matchedEdid && matchedEdid.match(/MiniSeason_\d+_([A-Za-z0-9_]+)/i);
-  const seasonMatch = matchedEdid && matchedEdid.match(/SCORE[_-]?S?(\d+)/i);
+// --- Mini-season / season logic ---
+const miniMatch = matchedEdid && matchedEdid.match(/MiniSeason_\d+_([A-Za-z0-9_]+)/i);
+const seasonMatch = matchedEdid && matchedEdid.match(/SCORE[_-]?S?(\d+)/i);
 
-  if (miniMatch) textSuffix = ` (Mini Season: ${prettifyMiniSeasonName(miniMatch[1])})`;
-  else if (seasonMatch) textSuffix = ` (Season ${seasonMatch[1]})`;
+if (miniMatch) {
+  // Only the pretty mini-season name
+  const prettyName = prettifyMiniSeasonName(miniMatch[1]);
+  pill.textContent = `Mini Season: ${prettyName}`;
+} else if (seasonMatch) {
+  pill.textContent = `${fullName} (Season ${seasonMatch[1]})`;
+} else {
+  pill.textContent = fullName;
+}
 
-  pill.appendChild(document.createTextNode(fullName + textSuffix));
-  entmPills.push(pill);
+entmPills.push(pill);
 });
 
 
