--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1615,7 +1615,25 @@ entmFulls.forEach(fullName => {
 const pill = document.createElement('span');
 pill.className = 'pill';
 
-// --- Icon logic (unchanged) ---
+// --- Icon logic ---
+let iconSrc = ''; 
+const miniMatch = matchedEdid && matchedEdid.match(/MiniSeason_\d+_([A-Za-z0-9_]+)/i);
+const seasonMatch = matchedEdid && matchedEdid.match(/SCORE[_-]?S?(\d+)/i);
+
+if (miniMatch || seasonMatch) {
+  iconSrc = '/assets/SeasonIcon.png'; // always season icon for these
+} else if (edidUpper.startsWith('F1_')) {
+  iconSrc = '/assets/SubCategory-AdditionalStorageIcon.svg';
+} else {
+  for (const key in ManualEntmIcons) {
+    if (edidUpper.includes(key)) {
+      iconSrc = ManualEntmIcons[key];
+      break;
+    }
+  }
+}
+
+// Append icon if any
 if (iconSrc) {
   const icon = document.createElement('img');
   icon.src = iconSrc;
@@ -1626,12 +1644,8 @@ if (iconSrc) {
   pill.appendChild(icon);
 }
 
-// --- Mini-season / season / normal text ---
-const miniMatch = matchedEdid && matchedEdid.match(/MiniSeason_\d+_([A-Za-z0-9_]+)/i);
-const seasonMatch = matchedEdid && matchedEdid.match(/SCORE[_-]?S?(\d+)/i);
-
-let pillText = ''; 
-
+// --- Text logic ---
+let pillText = '';
 if (miniMatch) {
   pillText = `Mini Season: ${prettifyMiniSeasonName(miniMatch[1])}`;
 } else if (seasonMatch) {
@@ -1640,7 +1654,7 @@ if (miniMatch) {
   pillText = fullName;
 }
 
-// Append the text **without removing the icon**
+// Add text without removing icon
 pill.appendChild(document.createTextNode(pillText));
 
 entmPills.push(pill);
