--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1566,84 +1566,82 @@ function renderResults(query) {
     return entmEdids.length ? entmEdids.splice(0,1)[0] : '';
   }
 
-// --- Build pills ---
-const entmPills = [];
+ // build pills
+  const entmPills = [];
 
-entmFulls.forEach(fullName => {
-  // get matched edid: reserved first, else best-effort
-  let matchedEdid = reservedEdidMap[fullName] || pickBestEdidForFull(fullName);
-  const edidUpper = String(matchedEdid || '').toUpperCase();
-  const fullUpper = fullName.trim().toUpperCase();
+  entmFulls.forEach(fullName => {
+    // get matched edid: reserved first, else best-effort
+    let matchedEdid = reservedEdidMap[fullName] || pickBestEdidForFull(fullName);
+    const edidUpper = String(matchedEdid || '').toUpperCase();
+    const fullUpper = fullName.trim().toUpperCase();
 
-  // Decide icon: exact full-name override first (guaranteed), else EDID-based rules
-  let iconSrc = '';
+    // Decide icon: exact full-name override first (guaranteed), else EDID-based rules
+    let iconSrc = '';
 
-  if (ExactPairs[fullUpper]) {
-    const expected = ExactPairs[fullUpper].toUpperCase();
-    if (edidUpper === expected || edidUpper.includes(expected) || edidUpper.startsWith('F1_')) {
-      iconSrc = '/assets/SubCategory-AdditionalStorageIcon.svg';
-    } else if (edidUpper.startsWith('F1_')) {
-      iconSrc = '/assets/SubCategory-AdditionalStorageIcon.svg';
-    }
-  }
-
-  if (!iconSrc) {
-    for (const key in ManualEntmIcons) {
-      if (edidUpper.includes(key)) {
-        iconSrc = ManualEntmIcons[key];
-        break;
+    // Exact forced names to ensure these map to the standard EDID when present
+    if (ExactPairs[fullUpper]) {
+      // Only give AdditionalStorage when the matchedEDID equals or contains the expected EDID,
+      // or if the expected EDID wasn't found but edidUpper starts with F1_
+      const expected = ExactPairs[fullUpper].toUpperCase();
+      if (edidUpper === expected || edidUpper.includes(expected) || edidUpper.startsWith('F1_')) {
+        iconSrc = '/assets/SubCategory-AdditionalStorageIcon.svg';
+      } else {
+        // If the exact pair expected EDID is not matched, still prefer AdditionalStorage only
+        // if an F1_ EDID was matched; otherwise fall through to EDID logic.
+        if (edidUpper.startsWith('F1_')) iconSrc = '/assets/SubCategory-AdditionalStorageIcon.svg';
       }
     }
-  }
 
-  if (!iconSrc && edidUpper.startsWith('F1_')) {
-    iconSrc = '/assets/SubCategory-AdditionalStorageIcon.svg';
-  }
-
-  if (!iconSrc) {
-    if (edidUpper.includes('ATX')) iconSrc = '/assets/AtomIcon.png';
-    else if (edidUpper.includes('SCORE_MINISEASON') || /SCORE[_-]?MINISEASON/i.test(matchedEdid)) {
-      iconSrc = '/assets/SeasonIcon.png';
-    } else if (/SCORE[_-]?S?\d+/i.test(matchedEdid) || edidUpper.includes('SCORE')) {
-      iconSrc = '/assets/SeasonIcon.png';
+    // EDID-based manual icons
+    if (!iconSrc) {
+      for (const key in ManualEntmIcons) {
+        if (edidUpper.includes(key)) {
+          iconSrc = ManualEntmIcons[key];
+          break;
+        }
+      }
     }
-  }
 
-  // --- Build pill ---
-  const pill = document.createElement('span');
-  pill.className = 'pill';
+    // F1_ generic rule (only if matchedEdid indicates F1_)
+    if (!iconSrc && edidUpper.startsWith('F1_')) {
+      iconSrc = '/assets/SubCategory-AdditionalStorageIcon.svg';
+    }
 
-  if (iconSrc) {
-    const icon = document.createElement('img');
-    icon.src = iconSrc;
-    icon.style.width = '30px';
-    icon.style.height = '30px';
-    icon.style.verticalAlign = 'middle';
-    icon.style.marginRight = '6px';
-    pill.appendChild(icon);
-  }
+    // ATX / SCORE fallbacks
+    if (!iconSrc) {
+      if (edidUpper.includes('ATX')) iconSrc = '/assets/AtomIcon.png';
+      else if (edidUpper.includes('SCORE_MINISEASON') || /SCORE[_-]?MINISEASON/i.test(matchedEdid)) iconSrc = '/assets/SeasonIcon.png';
+      else if (/SCORE[_-]?S?\d+/i.test(matchedEdid) || edidUpper.includes('SCORE')) iconSrc = '/assets/SeasonIcon.png';
+    }
 
-  // --- Mini-season / season / normal text ---
-  const miniMatch = matchedEdid && matchedEdid.match(/MiniSeason_\d+_([A-Za-z0-9_]+)/i);
-  const seasonMatch = matchedEdid && matchedEdid.match(/SCORE[_-]?S?(\d+)/i);
+    // Build pill DOM
+    const pill = document.createElement('span');
+    pill.className = 'pill';
 
-  let pillText = '';
+    if (iconSrc) {
+      const icon = document.createElement('img');
+      icon.src = iconSrc;
+      icon.style.width = '30px';
+      icon.style.height = '30px';
+      icon.style.verticalAlign = 'middle';
+      icon.style.marginRight = '6px';
+      pill.appendChild(icon);
+    }
 
-  if (miniMatch) {
-    // replace underscores with spaces and capitalize first letter of each word inline
-    const prettyName = miniMatch[1]
-      .replace(/_/g, ' ')
-      .replace(/\b\w/g, c => c.toUpperCase());
-    pillText = `Mini Season: ${prettyName}`;
-  } else if (seasonMatch) {
-    pillText = `${fullName} (Season ${seasonMatch[1]})`;
-  } else {
-    pillText = fullName;
-  }
+// optional season suffix
+let textSuffix = '';
+const miniMatch = matchedEdid && matchedEdid.match(/MiniSeason_\d+_([A-Za-z0-9_]+)/i);
+const seasonMatch = matchedEdid && matchedEdid.match(/SCORE[_-]?S?(\d+)/i);
+if (miniMatch) {
+  // replace underscores with spaces, capitalize each word
+  const prettyName = miniMatch[1]
+    .replace(/_/g, ' ')
+    .replace(/\b\w/g, c => c.toUpperCase());
+  textSuffix = ` (Mini Season: ${prettyName})`;
+} else if (seasonMatch) {
+  textSuffix = ` (Season ${seasonMatch[1]})`;
+}
 
-  pill.appendChild(document.createTextNode(pillText));
-  entmPills.push(pill);
-});
 
 
   // append pills with "and" connectors
