--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1631,17 +1631,22 @@ function renderResults(query) {
 // optional season suffix
 let textSuffix = '';
 if (matchedEdid) {
+  // Check manual mini season aliases first
   if (miniSeasonAliases[matchedEdid]) {
     textSuffix = ` (Mini Season: ${miniSeasonAliases[matchedEdid]})`;
   } else {
-    // Capture only the "name" part immediately after the year
     const miniMatch = matchedEdid.match(/MiniSeason_\d+_([A-Za-z0-9]+)/i);
     if (miniMatch) {
       const prettyName = miniMatch[1].replace(/([a-z])([A-Z])/g, '$1 $2');
       textSuffix = ` (Mini Season: ${prettyName})`;
+    } else {
+      // Fallback for regular SCORE seasons
+      const seasonMatch = matchedEdid.match(/SCORE[_-]?S?(\d+)/i);
+      if (seasonMatch) textSuffix = ` (Season ${seasonMatch[1]})`;
     }
   }
 }
+
 
     pill.appendChild(document.createTextNode(fullName + textSuffix));
     entmPills.push(pill);
