--- a/76Tools.html
+++ b/76Tools.html
@@ -174,10 +174,19 @@
         <a href="https://mrsblobby.github.io/CampCategorySearch-PTS/Index.html">Visit Tool</a>
       </div>
     </div>
+
+    <div class="tool-card" style="--accent: #01b111;">
+      <img src="/assets/CoverImageVATS.png" alt="V.A.T.S. Critical Threshold Calculator">
+      <div class="tool-card-content">
+        <h2>V.A.T.S. Critical Threshold Calculator)</h2>
+        <p>Desmos calculator to determine specific LCK value thresholds to achieve instant V.A.T.S. crit bar refills, based on user-inputted variables. Original calculator by me. Credit to Mapex for updating with newer LCK curve table values.</p>
+        <a href="https://www.desmos.com/calculator/ws2guoar4d">Visit Tool</a>
+      </div>
+    </div>
   </main>
 
   <footer>
-    <p>Last Updated: October 2025</p>
+    <p>Last Updated: November 2025</p>
   </footer>
 </body>
 </html>
