--- a/76Tools.html
+++ b/76Tools.html
@@ -178,7 +178,7 @@
     <div class="tool-card" style="--accent: #01b111;">
       <img src="/assets/CoverImageVATS.png" alt="V.A.T.S. Critical Threshold Calculator">
       <div class="tool-card-content">
-        <h2>V.A.T.S. Critical Threshold Calculator)</h2>
+        <h2>V.A.T.S. Critical Threshold Calculator</h2>
         <p>Desmos calculator to determine specific LCK value thresholds to achieve instant V.A.T.S. crit bar refills, based on user-inputted variables. Original calculator by me. Credit to Mapex for updating with newer LCK curve table values.</p>
         <a href="https://www.desmos.com/calculator/ws2guoar4d">Visit Tool</a>
       </div>
