--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -894,19 +894,18 @@
 
 <div class="info-dropdown">
   <button id="infoButton">General Info / Disclaimers / FAQ / Legend</button>
- <div id="infoContent" class="info-dropdown-content">
-  <div class="legend-entry">
-    <img src="/assets/AtomIcon.png" alt="Atom" class="legend-icon">
-    <span>Atomic Shop content</span>
-  </div>
-  <div class="legend-entry">
-    <img src="/assets/SeasonIcon.png" alt="Season" class="legend-icon">
-    <span>Season reward</span>
- 	 </div>
-	</div>
+  <div id="infoContent" class="info-content">
+    <div class="legend-entry">
+      <img src="/assets/AtomIcon.png" alt="Atom" class="legend-icon">
+      <span>Atomic Shop content</span>
+    </div>
+    <div class="legend-entry">
+      <img src="/assets/SeasonIcon.png" alt="Season" class="legend-icon">
+      <span>Season reward</span>
     </div>
   </div>
 </div>
+
 
 <div class="controls">
   <div class="search-line">
