--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -758,7 +758,9 @@
 
 .info-dropdown {
   position: relative;
-  display: inline-block;
+  display: flex;
+  justify-content: center; /* centers the button */
+  margin: 1rem 0;
 }
 
 #infoButton {
@@ -766,15 +768,22 @@
   color: #fff;
   border: 1px solid #444;
   border-radius: 6px;
-  padding: 8px 12px;
+  padding: 8px 14px;
   cursor: pointer;
+  font-size: 1rem;
+  transition: background 0.15s;
+}
+
+#infoButton:hover {
+  background: #444;
 }
 
 #infoContent {
   display: none;
   position: absolute;
-  right: 0;
   top: 110%;
+  left: 50%;
+  transform: translateX(-50%);
   background: #1f1f1f;
   border: 1px solid #333;
   border-radius: 8px;
@@ -788,27 +797,17 @@
   display: block;
 }
 
-.info-section {
-  margin-bottom: 10px;
-}
-
-.info-section h3 {
-  margin: 4px 0;
-  font-size: 1em;
-  color: #ffcc00;
-}
-
 .legend-entry {
   display: flex;
   align-items: center;
   gap: 6px;
   margin-bottom: 6px;
 }
+
 .legend-icon {
   width: 30px;
   height: 30px;
 }
-
 
   }
 </style>
@@ -894,7 +893,7 @@
 
 <div class="info-dropdown">
   <button id="infoButton">General Info / Disclaimers / FAQ / Legend</button>
-  <div id="infoContent" class="info-content">
+  <div id="infoContent">
     <div class="legend-entry">
       <img src="/assets/AtomIcon.png" alt="Atom" class="legend-icon">
       <span>Atomic Shop content</span>
@@ -1105,7 +1104,18 @@ window.addEventListener('DOMContentLoaded', () => {
 
   // Optional: render all results initially
   renderResults('');
+
+  // --- Info dropdown ---
+  const infoButton = document.getElementById('infoButton');
+  const infoContent = document.getElementById('infoContent');
+
+  if (infoButton && infoContent) {
+    infoButton.addEventListener('click', () => {
+      infoContent.classList.toggle('open');
+    });
+  }
 });
+
 
 // --- Manual icon overrides ---
 const ManualIcons = {
@@ -1302,14 +1312,6 @@ dropdownOptions.querySelectorAll('.option').forEach(option => {
 });
 
 document.getElementById('searchBox').addEventListener('input', e => renderResults(e.target.value));
-
-// --- Info / FAQ button ---
-const infoButton = document.getElementById('infoButton');
-const infoContent = document.getElementById('infoContent');
-
-infoButton.addEventListener('click', () => {
-  infoContent.classList.toggle('open');
-});
 
 
 
