--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -890,10 +890,11 @@
       </div>
     </details>
   </div>
+</div>
 
-<div class="info-dropdown">
+<div class="info-dropdown" style="text-align: center; margin: 1rem 0;">
   <button id="infoButton">General Info / Disclaimers / FAQ / Legend</button>
-  <div id="infoContent">
+  <div id="infoContent" class="info-content">
     <div class="legend-entry">
       <img src="/assets/AtomIcon.png" alt="Atom" class="legend-icon">
       <span>Atomic Shop content</span>
@@ -904,6 +905,7 @@
     </div>
   </div>
 </div>
+
 
 
 <div class="controls">
