Update to v3.0 Beta

--- a/76Tools.html
+++ b/76Tools.html
@@ -161,7 +161,7 @@
       <img src="/assets/CoverImage.png" alt="Fallout 76 C.A.M.P. Item Lookup">
       <div class="tool-card-content">
         <h2>C.A.M.P. Item Lookup</h2>
-        <p>Search tool for finding Fallout 76 C.A.M.P. items in the build menu.</p>
+        <p>Database Tool for Fallout 76 C.A.M.P. Items. Lists Workshop Menu categories, Plan/Entitlement requirements, and allows searches.</p>
         <a href="https://mrsblobby.github.io/CAMPCategorySearch/Index.html">Visit Tool</a>
       </div>
     </div>
@@ -170,7 +170,7 @@
       <img src="/assets/CoverImagePTS.png" alt="Fallout 76 C.A.M.P. Item Lookup (PTS)">
       <div class="tool-card-content">
         <h2>C.A.M.P. Item Lookup (PTS)</h2>
-        <p>Search tool for finding Fallout 76 C.A.M.P. items in the build menu (PTS-specific).</p>
+        <p>Database Tool for Fallout 76 C.A.M.P. Items. Lists Workshop Menu categories, Plan/Entitlement requirements, and allows searches (PTS-specific).</p>
         <a href="https://mrsblobby.github.io/CampCategorySearch-PTS/Index.html">Visit Tool</a>
       </div>
     </div>
