--- a/CampCategorySearch-PTS/Index.html
+++ b/CampCategorySearch-PTS/Index.html
@@ -780,7 +780,7 @@
         <h4>v3.0 Beta</h4>
         <ul><li>Expansion towards a more generalized database tool:<br>
 - Added category icons<br>
-- Added placement conditions (plan, entitlement) for objects, and added respective source icons, i.e. SCORE, Gold Bullion, Stamps, Atomic Shop icons. Known issue with beta version: certain plans will not show yet (i.e. Nuclear Winter stash boxes), nor do challenge requirements (i.e. Kelp Curtain). NOTE: THIS TOOL DOES NOT DISTINGUISH BETWEEN WHAT IS AN ISN'T OBTAINABLE. PLEASE DOUBLE CHECK THIS YOURSELF IF APPLICABLE<br>
+- Added placement conditions (plan, entitlement) for objects, and added respective source icons, i.e. SCORE, Gold Bullion, Stamps, Atomic Shop icons. Known issue with beta version: certain plans will not show yet (i.e. Nuclear Winter stash boxes), nor do challenge requirements (i.e. Kelp Curtain). NOTE: THIS TOOL DOES NOT DISTINGUISH BETWEEN WHAT IS AND ISN'T OBTAINABLE. PLEASE DOUBLE CHECK THIS YOURSELF IF APPLICABLE<br>
 - Added search filters<br>
 - Added different search options<br>
 - General UI cleanup<br>
