--- a/CAMPCategorySearch/Index.html
+++ b/CAMPCategorySearch/Index.html
@@ -1449,7 +1449,7 @@ function renderResults(query) {
 if (hasBook) {
   const ManualIcons = {
     'XPD_': '/assets/StampIcon.png',
-    '_GoldVendor': '/assets/BullionIcon.png',
+    '_GOLDVENDOR': '/assets/BullionIcon.png',
   };
 
   // Split BOOK_FULLs and EDIDs by semicolon
