--- a/CAMPCategorySearch/Index.html
+++ b/CAMPCategorySearch/Index.html
@@ -1474,7 +1474,7 @@ if (hasBook) {
     // Decide icon
     let iconSrc = '';
     for (const key in ManualIcons) {
-      if (bookEdidUpper.includes(key)) {
+      if (bookEdidUpper.includes(key.toUpperCase())) {
         iconSrc = ManualIcons[key];
         break;
       }
