--- a/CAMPCategorySearch/Index.html
+++ b/CAMPCategorySearch/Index.html
@@ -1039,7 +1039,7 @@ window.addEventListener('DOMContentLoaded', () => {
 // --- Manual icon overrides ---
 const ManualIcons = {
   'XPD_': '/assets/StampIcon.png',
-  '_GoldVendor': '/assets/BullionIcon.png',
+  '_GOLDVENDOR': '/assets/BullionIcon.png',
 };
 const ManualEntmIcons = {
   'Babylon_': '/assets/V51Icon.png',
