--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1039,7 +1039,7 @@ window.addEventListener('DOMContentLoaded', () => {
 // --- Manual icon overrides ---
 const ManualIcons = {
   'XPD_': '/assets/StampIcon.png',
-  '_GoldVendor': '/assets/BullionIcon.png'
+  '_GOLDVENDOR': '/assets/BullionIcon.png'
 };
 const ManualEntmIcons = {
   'Babylon_': '/assets/V51Icon.png',
@@ -1449,7 +1449,7 @@ function renderResults(query) {
 if (hasBook) {
   const ManualIcons = {
     'XPD_': '/assets/StampIcon.png',
-    '_GoldVendor': '/assets/BullionIcon.png',
+    '_GOLDVENDOR': '/assets/BullionIcon.png',
   };
 
   // Split BOOK_FULLs and EDIDs by semicolon
@@ -1474,7 +1474,7 @@ if (hasBook) {
     // Decide icon
     let iconSrc = '';
     for (const key in ManualIcons) {
-      if (bookEdidUpper.includes(key)) {
+      if (bookEdidUpper.includes(key.toUpperCase())) {
         iconSrc = ManualIcons[key];
         break;
       }
