--- a/76Tools.html
+++ b/76Tools.html
@@ -158,7 +158,7 @@
 
   <main>
     <div class="tool-card" style="--accent: #ffc00f;">
-      <img src="/assets/CoverImage.png" alt="Fallout 76 C.A.M.P. Item Lookup">
+      <img src="/assets/CoverImage.png" alt="Fallout 76 C.A.M.P. Item Database">
       <div class="tool-card-content">
         <h2>C.A.M.P. Item Lookup</h2>
         <p>Database Tool for Fallout 76 C.A.M.P. Items. Lists Workshop Menu categories, Plan/Entitlement requirements, and allows searches.</p>
@@ -167,7 +167,7 @@
     </div>
 
     <div class="tool-card" style="--accent: #497ab4;">
-      <img src="/assets/CoverImagePTS.png" alt="Fallout 76 C.A.M.P. Item Lookup (PTS)">
+      <img src="/assets/CoverImagePTS.png" alt="Fallout 76 C.A.M.P. Item Database (PTS)">
       <div class="tool-card-content">
         <h2>C.A.M.P. Item Lookup (PTS)</h2>
         <p>Database Tool for Fallout 76 C.A.M.P. Items. Lists Workshop Menu categories, Plan/Entitlement requirements, and allows searches (PTS-specific).</p>
