--- a/76Tools.html
+++ b/76Tools.html
@@ -179,8 +179,8 @@
       <img src="/assets/CoverImageVATS.png" alt="V.A.T.S. Critical Threshold Calculator">
       <div class="tool-card-content">
         <h2>V.A.T.S. Critical Threshold Calculator</h2>
-        <p>Desmos calculator to determine specific LCK value thresholds to achieve instant V.A.T.S. crit bar refills, based on user-inputted variables. Original calculator by me. Credit to Mapex for updating with newer LCK curve table values.</p>
-        <a href="https://www.desmos.com/calculator/ws2guoar4d">Visit Tool</a>
+        <p>Desmos calculator to determine specific LCK value thresholds to achieve V.A.T.S. critical bar refills in X hits/misses, based on user-inputted variables. Calculator by me. LCK curve table values updated by Mapex.</p>
+        <a href="https://www.desmos.com/calculator/grhklwbxy5">Visit Tool</a>
       </div>
     </div>
   </main>
