--- a/76Tools.html
+++ b/76Tools.html
@@ -160,7 +160,7 @@
     <div class="tool-card" style="--accent: #ffc00f;">
       <img src="/assets/CoverImage.png" alt="Fallout 76 C.A.M.P. Item Database">
       <div class="tool-card-content">
-        <h2>C.A.M.P. Item Lookup</h2>
+        <h2>C.A.M.P. Item Database</h2>
         <p>Database Tool for Fallout 76 C.A.M.P. Items. Lists Workshop Menu categories, Plan/Entitlement requirements, and allows searches.</p>
         <a href="https://mrsblobby.github.io/CAMPCategorySearch/Index.html">Visit Tool</a>
       </div>
@@ -169,7 +169,7 @@
     <div class="tool-card" style="--accent: #497ab4;">
       <img src="/assets/CoverImagePTS.png" alt="Fallout 76 C.A.M.P. Item Database (PTS)">
       <div class="tool-card-content">
-        <h2>C.A.M.P. Item Lookup (PTS)</h2>
+        <h2>76 C.A.M.P. Item Database (PTS)</h2>
         <p>Database Tool for Fallout 76 C.A.M.P. Items. Lists Workshop Menu categories, Plan/Entitlement requirements, and allows searches (PTS-specific).</p>
         <a href="https://mrsblobby.github.io/CampCategorySearch-PTS/Index.html">Visit Tool</a>
       </div>
