--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -94,10 +94,9 @@
 
 .no-results {
   text-align: center;
-  width: 100%;
+  width: 150px;
   padding: 20px 0;
   color: #ccc;
-  font-size: 1.1em;
   list-style: none;
 }
 
