--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -94,9 +94,10 @@
 
 .no-results {
   text-align: center;
-  width: 150px;
-  padding: 20px 0;
+  width: 100%;
+  padding: 10px 0 10px 10px;
   color: #ccc;
+  font-size: 1em;
   list-style: none;
 }
 
