--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -95,7 +95,7 @@
 .no-results {
   text-align: center;
   width: 100%;
-  padding: 10px 0 10px 10px;
+  padding: 10px 0px 10px 10px;
   color: #ccc;
   font-size: 1em;
   list-style: none;
