--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -738,11 +738,13 @@
 }
 
 
-  @media (max-width: 720px) {
+  @media (max-width: 600px) {
     li {
       flex-direction: column;
       align-items: center;
       text-align: center;
+      width: 95%;
+      margin: 0 auto;
     }
     .result-left {
       max-width: none;
