--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -743,8 +743,7 @@
       flex-direction: column;
       align-items: center;
       text-align: center;
-      width: 95%;
-      margin: 0 auto;
+      width: 550px;
     }
     .result-left {
       max-width: none;
