--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -743,7 +743,7 @@
       flex-direction: column;
       align-items: center;
       text-align: center;
-      width: 350px;
+      max-width: 125%;
     }
     .result-left {
       max-width: none;
