--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -743,7 +743,7 @@
       flex-direction: column;
       align-items: center;
       text-align: center;
-      max-width: 125%;
+      width: 350px;
     }
     .result-left {
       max-width: none;
