--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1048,9 +1048,9 @@ window.addEventListener('DOMContentLoaded', () => {
 
 // Icons driven by BOOK_SOURCE_TAG values
 const BookTagIcons = {
-  'RaidsReward': '/assets/RaidsRewardIcon.png',
-  'XPD': '/assets/StampIcon.png',
-  'VendorGold': '/assets/BullionIcon.png'
+  'BullionVendor': '/assets/BullionIcon.png'
+  'StampsVendor': '/assets/StampIcon.png',
+  'DailyOps': '/assets/DOpsIcon.png',
 };
 
 // --- Manual icon overrides ---
