--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1050,7 +1050,7 @@ window.addEventListener('DOMContentLoaded', () => {
 const BookTagIcons = {
   'BullionVendor': '/assets/BullionIcon.png'
   'StampsVendor': '/assets/StampIcon.png',
-  'DailyOps': '/assets/DOpsIcon.png',
+  'DailyOps': '/assets/DOpsIcon.png'
 };
 
 // --- Manual icon overrides ---
