--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content="Fallout 76 C.A.M.P. Item Database">
-  <meta property="og:description" content="Database Tool for Fallout 76 C.A.M.P. Items. Lists Workshop Menu categories, C.A.M.P. budget cost, Plan/Entitlement requirements, and allows searches.">
+  <meta property="og:description" content="Database Tool for Fallout 76 C.A.M.P. Items. Lists Workshop Menu categories, Plan/Entitlement requirements, and allows searches.">
   <meta property="og:image" content="https://raw.githubusercontent.com/MrsBlobby/mrsblobby.github.io/refs/heads/main/assets/CAMPIcon2.png">
   <meta property="og:url" content="https://yourdomain.com/">
   <meta property="og:type" content="website">
@@ -778,7 +778,7 @@
       Made by <span class="author-name">MrsBlobby</span>
       <a href="https://mrsblobby.github.io/76Tools.html" class="badge-link">Other Tools</a>
     </p>
-    <p class="updated">Last Updated: November 1, 2025</p>
+    <p class="updated">Last Updated: November 15, 2025</p>
   </div>
 </div>
 
@@ -786,15 +786,15 @@
 <div class="container">
     <details>
       <summary>Version History</summary>
-      <div class="changelog-entry">
-        <h4>v3.0</h4>
+           <div class="changelog-entry">
+        <h4>v3.0 Beta</h4>
         <ul><li>Expansion towards a more generalized database tool:<br>
 - Added category icons<br>
-- Added plan/entitlement requirements. Icons identify the source to a limited extent, i.e. SCORE, Gold Bullion, Stamps, Atomic Shop. This will be expanded upon in the future<br>
-- Added budget costs<br>
+- Added placement conditions (plan, entitlement) for objects, and added respective source icons, i.e. SCORE, Gold Bullion, Stamps, Atomic Shop icons. Known issue with beta version: certain plans will not show yet (i.e. Nuclear Winter stash boxes), nor do challenge requirements (i.e. Kelp Curtain). NOTE: THIS TOOL DOES NOT DISTINGUISH BETWEEN WHAT IS AND ISN'T OBTAINABLE. PLEASE DOUBLE CHECK THIS YOURSELF IF APPLICABLE<br>
 - Added search filters<br>
 - Added different search options<br>
-- General UI cleanup</li></ul>
+- General UI cleanup<br>
+- Full v3.0 release will also list CAMP budget costs, have more source icons, and include further polishing of minor issues</li></ul>
       </div>
       <div class="changelog-entry">
         <h4>v2.3.1</h4>
