--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1050,7 +1050,7 @@ window.addEventListener('DOMContentLoaded', () => {
 const BookTagIcons = {
   'BullionVendor': '/assets/BullionIcon.png'
   'StampsVendor': '/assets/StampIcon.png',
-  'DailyOps': '/assets/DOpsIcon.png'
+  'DailyOps': '/assets/DOpsIcon.png',
 };
 
 // --- Manual icon overrides ---
@@ -1464,7 +1464,7 @@ if (hasBook) {
   const BookTagIcons = {
     'DailyOps': '/assets/DOpsIcon.png',
     'StampsVendor': '/assets/StampIcon.png',
-    'BullionVendor': '/assets/BullionIcon.png'
+    'BullionVendor': '/assets/BullionIcon.png',
     // add more here as needed
   };
 
