--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1048,7 +1048,7 @@ window.addEventListener('DOMContentLoaded', () => {
 
 // Icons driven by BOOK_SOURCE_TAG values
 const BookTagIcons = {
-  'BullionVendor': '/assets/BullionIcon.png'
+  'BullionVendor': '/assets/BullionIcon.png',
   'StampsVendor': '/assets/StampIcon.png',
   'DailyOps': '/assets/DOpsIcon.png',
 };
